apps/namespaces/media-server/nzbget/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: lscr.io/linuxserver/nzbget
        ports:
        - name: http
          containerPort: 6789
          protocol: TCP
        volumeMounts:
        - name: nzbget-data
          mountPath: /config
        - name: nfs-media
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: nzbget-data
        persistentVolumeClaim:
          claimName: nzbget-data-pvc
