apps/namespaces/media-server/nzbget/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: prowlarr
  type: ClusterIP
