apps/namespaces/media-server/nzbget/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: media-server
spec:
  rules:
    - host: nzbget.home
      http:
        paths:
          - backend:
              service:
                name: nzbget
                port:
                  number: 80
            path: /
            pathType: Prefix
